2014-05-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.4 release procedure:
 	Changes since nco-4_4_3: -x tolerance, --rad orphans, CERES, mmr
	cd ~/nco;cvs tag -d nco-4_4_4;cvs tag -d nco-4_4_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.4 release"
	cvs tag -c nco-4_4_4;cvs tag -c nco-4_4_4-1

	* ncdismember handles whitespace in group names in ncatted phase

2014-05-21  Charlie Zender  <zender@uci.edu>

	* Change ncdismember to use eval so ${opt}=${5} may contain multiple whitespace-separated arguments

	* Implement --grp_xtr_var_xcl for ncdismember. Fixes problems for TES, SMAP data.

2014-05-20  Charlie Zender  <zender@uci.edu>

	* Improve ncks -b --bnr --fl_bnr documentation

2014-05-19  Charlie Zender  <zender@uci.edu>

	* Tweak chunking for 1D record variables

2014-05-15  Charlie Zender  <zender@uci.edu>

	* netCDF 4.3.2 default chunksize of record variables is 1048576	not 1
	Alter regression tests to not fail with this, eliminate false negatives

2014-05-06  Charlie Zender  <zender@uci.edu>

	* Improve HDF4 documentation accuracy and clarity

2014-05-05  Charlie Zender  <zender@uci.edu>

	* Free hash table with nco_trv_hsh_del(tbl)

2014-05-04  Charlie Zender  <zender@uci.edu>

	* Fix indexing error with flg_dne, flg_dne2

2014-04-23  Charlie Zender  <zender@uci.edu>

	* Attempt regular expression parsing in nco_dmn_avg_mk() only when
	user explicitly specifies dimensions to process. This allows ncwa
	to work on files with crazy HDF names for dimensions.

	* Clean-up warnings for crazy HDF names

2014-04-22  Charlie Zender  <zender@uci.edu>

	* Finish hacks to nco_netcdf.c nco_inq_varid() and nco_def_dim()
	that allow file translation to work with crazy HDF names.

2014-04-20  Charlie Zender  <zender@uci.edu>

	* Update bld/Makefile for Yellowstone configuration changes

2014-04-16 Pedro Vicente  <pvicente@uci.edu>

	* nco_prc_cmn_nsm_att() Process (define, write) variables belonging to ensembles in both files (ncbo);