@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_aux.h,v 1.33 2014-01-13 03:29:53 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_aux.h,v 1.34 2014-05-27 02:04:18 zender Exp $ */
 
 /* Purpose: Sub-set cell-based grids using auxiliary coordinate variable */
 
@@ -79,7 +79,7 @@ nco_bool
 nco_find_lat_lon_trv
 (const int nc_id,                    /* I [ID] netCDF file ID */
  const trv_sct * const var_trv,      /* I [sct] Variable object that contains "standard_name" attribute */
- const char * const attr_val,        /* I [sng] Attribute value to find ( "latitude" or "longitude" ) */
+ const char * const att_val_trg,     /* I [sng] Attribute value to find ( "latitude" or "longitude" ) */
  char **var_nm_fll,                  /* I/O [sng] Full name of variable that has "latitude" or "longitude" attributes */
  int *dmn_id,                        /* I/O [id] Dimension ID of the diension of "latitude" and "longitude" */
  nc_type *crd_typ,                   /* I/O [enm] netCDF type of both "latitude" and "longitude" */
